<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">远程桌面</string>
    <string name="device_list_title">设备列表</string>
    <string name="add_device">添加设备</string>
    <string name="connect">连接</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="device_id_hint">IP或域名:端口，如 123.45.67.89:3389（Windows 自带远程桌面）</string>
    <string name="windows_account_hint">Windows 账号（支持域账号）</string>
    <string name="windows_password_hint">Windows 密码</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="connecting">连接中…</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_failed">连接失败</string>
    <string name="disconnect">断开</string>
    <string name="keyboard">键盘</string>
    <string name="win_key">Win</string>
    <string name="shrink">缩小</string>
    <string name="fullscreen">全屏</string>
    <string name="required_field">此项为必填</string>
    <string name="invalid_device_id">设备标识格式应为 IP或域名:端口</string>
    <string name="confirm_delete">确定删除该设备？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
</resources>
